--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Manrope:wght@800&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+#root {
+  width: 100%;
+  height: 100%;
 }
 
 body {
@@ -12,15 +19,18 @@ body {
   --darker: hsl(217, 19%, 24%);
   --darkest: hsl(218, 23%, 16%);
 
-  margin: 0;
-  display: flex;
+  /* margin: 0; */
+  /* display: flex;
   justify-content: center;
-  align-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  align-items: center; */
+  /* min-width: 320px;
+  min-height: 100vh; */
 
   background-color: var(--darkest);
+  font-family: "Manrope", sans-serif;
+  font-optical-sizing: auto;
   font-weight: 800;
+  font-style: normal;
 }
 
 button {
@@ -33,25 +43,39 @@ button {
 
 .wrapper {
   background-color: var(--darker);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+
   padding: 3rem;
+  margin: 0 auto;
+
   border-radius: 16px;
 
   display: flex;
   flex-direction: column;
-  gap: 2rem;
   align-items: center;
-  justify-content: center;
+  justify-content: space-between;
 
-  min-width: 30rem;
+  width: 35%;
+  height: 35%;
+
+  min-width: 300px;
+  min-height: 300px;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .title {
   color: var(--green);
   text-transform: uppercase;
+  text-align: center;
 }
 
 .text {
   color: var(--lightest);
+  text-align: center;
 }
 
 .divider {
@@ -62,9 +86,32 @@ button {
   justify-content: center;
   align-items: center;
 
-  width: 3.2rem;
-  height: 3.2rem;
+  width: 50px;
+  height: 50px;
 
   background-color: var(--green);
   border-radius: 50%;
+
+  cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+  .wrapper {
+    width: 50%;
+    height: 50%;
+  }
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    width: 75%;
+    height: 75%;
+  }
+}
+
+@media (max-width: 480px) {
+  .wrapper {
+    width: 90%;
+    height: 90%;
+  }
 }
